# nvmbuilder

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  todolist.txt
.cursor/: Dockerfile
.cursor/commands/: diff-review.md  generate-plan-for-issue.md  refine-ticket.md  release-prep.md
.cursor/plans/: build-statistics-phase-1-f25fef98.plan.md
.cursor/rules/: absorb-plan.mdc  overview.mdc  project-overview.mdc
data/: block.json  block.toml  block.yaml  data.xlsx
examples/: block.json  block.toml  block.yaml  block_no_excel.toml  blocks.h  data.xlsx
python/: nvmbuilder_schema.py
src/: args.rs  checksum.rs  dump.rs  emit.rs  error.rs  hex.rs  layout.rs  lib.rs  main.rs  printer.rs  schema.rs  types.rs  variants.rs  writer.rs
src/commands/: generate.rs  mod.rs  stats.rs
src/layout/: args.rs  block.rs  config.rs  conversions.rs  entry.rs  errors.rs  header.rs  mod.rs  settings.rs  types.rs  value.rs
src/output/: args.rs  checksum.rs  errors.rs  mod.rs
src/variant/: args.rs  errors.rs  helpers.rs  mod.rs
src/variants/: mod.rs
src/visuals/: formatters.rs  mod.rs
tests/: mixed_features.rs  no_excel.rs  size_enforcement.rs  smoke.rs  statistics.rs  strict_conversions.rs
tests/common/: mod.rs
