[package]
name = "nvmbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.29.0"
clap = { version = "4.5.42", features = ["derive"] }
crc = "3.3.0"
ihex = "3.0.0"
indexmap = { version = "2.10.0", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
toml = { version = "0.9.4", features = ["preserve_order"] }
